workshop3/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dov-bear-active
  namespace: workshop3
spec:
  selector:
    app: dov-bear
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: dov-bear-preview
  namespace: workshop3
spec:
  selector:
    app: dov-bear
  ports:
    - port: 80
      targetPort: 3000
